--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "type-check": "tsc --noEmit",
-    "lint": "tslint --project ."
+    "lint": "tslint --project .",
+    "build:lambda": "netlify-lambda build src/lambda",
   },
   "repository": {
     "type": "git",
